--- a/src/hph.sitetheme/hph/sitetheme/resources/app/sass/layout/_footer.scss
+++ b/src/hph.sitetheme/hph/sitetheme/resources/app/sass/layout/_footer.scss
@@ -3,7 +3,6 @@
 // -----------------------------------
 
 .app-footer {
-    padding-top: $spacer;
     padding-bottom: $spacer;
 }
 
